--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,8 +1,8 @@
-name: Publish  to npmjs
+name: Check
 on:
   push:
-    tags:
-      - v**
+    branches:
+      - main
 jobs:
   core:
     runs-on: ubuntu-latest
@@ -19,8 +19,3 @@ jobs:
           npm run lint
           npm run test
           npm run build
-      - name: publish
-        working-directory: ./src/core
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
