--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restarfall-repo",
-  "version": "0.1.0",
+  "version": "0.1.1-0",
   "scripts": {
     "prepare": "husky install",
     "prerelease": "standard-version --prerelease",
