chore(core): change package name

--- a/src/core/package.json
+++ b/src/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restarfall-repo",
+  "name": "restarfall",
   "version": "0.1.0",
   "description": "Template fot ts lib",
   "exports": {
