--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "restarfall-repo",
+  "license": "MIT",
+  "author": "Evgenii Fedotov",
   "version": "0.1.3",
   "scripts": {
     "prepare": "husky install",
+    "lint": "eslint -c ./.eslintrc.js ./packages",
     "pre-release": "standard-version --prerelease",
     "release": "standard-version"
   },
-  "author": "Evgenii Fedotov",
-  "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/jest": "^29.5.4",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.47.0",
+    "eslint-kit": "^10.5.0",
     "husky": "^8.0.3",
-    "standard-version": "^9.5.0"
+    "jest": "^29.6.3",
+    "prettier": "^3.0.2",
+    "standard-version": "^9.5.0",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
