--- a/packages/restarfall-react/package.json
+++ b/packages/restarfall-react/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "restarfall",
+  "name": "restarfall-react",
   "version": "0.1.3",
+  "license": "MIT",
+  "author": "Evgenii Fedotov",
   "description": "Restarfall is a JavaScript library for creating business logic and data management.",
   "exports": {
     ".": {
@@ -16,25 +18,8 @@
     "dist"
   ],
   "scripts": {
-    "lint": "eslint -c ./.eslintrc.js ./src",
     "test": "jest",
     "build": "rm -fr ./dist && webpack -c ./webpack/prod.js ",
     "start": "rm -fr ./dist && webpack -c ./webpack/dev.js --watch"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.5.4",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.47.0",
-    "eslint-kit": "^10.5.0",
-    "jest": "^29.6.3",
-    "prettier": "^3.0.2",
-    "ts-loader": "^9.4.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
   }
 }
