--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "declaration": true,
     "outDir": "./dist/types"
   },
-  "include": ["./src"],
+  "include": ["./packages"],
   "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
