chore: setup publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,7 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
+          cache: "npm"
       - run: npm ci
       - run: npm run lint
   restarfall:
@@ -20,6 +21,9 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
+          cache: "npm"
+      - name: install root
+        run: npm ci
       - name: test & build
         working-directory: ./packages/restarfall
         run: |
