--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,11 @@
     "outDir": "./dist/types"
   },
   "include": ["./packages"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/*.spec.tsx",
+    "**/*.test.tsx"
+  ]
 }
