--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run lint
-      - run: npm run update-depends
   restarfall:
     needs: [restarfall-repo]
     runs-on: ubuntu-latest
@@ -24,7 +23,9 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           cache: "npm"
       - name: Install root
-        run: npm ci
+        run: |
+          npm ci
+          npm run update-depends
       - name: Test & build
         working-directory: ./packages/restarfall
         run: |
@@ -47,7 +48,9 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           cache: "npm"
       - name: Install root
-        run: npm ci
+        run: |
+          npm ci
+          npm run update-depends
       - name: Install & build restarfall
         working-directory: ./packages/restarfall
         run: |
