--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint -c ./.eslintrc.js ./packages",
     "update-depends": "node ./scripts/update-depends.js",
     "pre-release": "standard-version --prerelease",
+    "prerelease": "./scripts/prerelease",
     "release": "standard-version"
   },
   "devDependencies": {
