--- a/packages/restarfall/package.json
+++ b/packages/restarfall/package.json
@@ -4,6 +4,26 @@
   "author": "Evgenii Fedotov",
   "version": "0.1.13",
   "description": "Restarfall is a JavaScript library for creating business logic and data management.",
+  "keywords": [
+    "business",
+    "logic",
+    "data",
+    "flow",
+    "state management",
+    "data management",
+    "state manager",
+    "model",
+    "reactive",
+    "state",
+    "event",
+    "store",
+    "component",
+    "functional"
+  ],
+  "bugs": {
+    "url": "https://github.com/EvgenyiFedotov/restarfall/issues"
+  },
+  "homepage": "https://github.com/EvgenyiFedotov/restarfall#readme",
   "exports": {
     ".": {
       "import": "./dist/cjs/index.js",
