--- a/packages/restarfall/package.json
+++ b/packages/restarfall/package.json
@@ -33,10 +33,10 @@
       "default": "./dist/cjs/index.js"
     },
     "./utils": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/cjs/index.js",
-      "require": "./dist/mjs/index.js",
-      "default": "./dist/cjs/index.js"
+      "types": "./dist/types/utils/index.d.ts",
+      "import": "./dist/cjs/utils.js",
+      "require": "./dist/mjs/utils.js",
+      "default": "./dist/cjs/utils.js"
     }
   },
   "main": "dist/cjs/index.js",
